--- a/src/webapp/WEB-INF/pages/car.html
+++ b/src/webapp/WEB-INF/pages/car.html
@@ -15,9 +15,9 @@
     </tr>
 
     <tr th:each="car : ${cars}">
-        <td th:text="${car.getId()}" align=""></td>
-        <td th:text="${car.getModel()}"></td>
-        <td th:text="${car.getSeries()}"></td>
+        <td th:text="${car.getId()}" align="center"></td>
+        <td th:text="${car.getModel()}" align="center"></td>
+        <td th:text="${car.getSeries()}" align="center"></td>
     </tr>
 
 </table>
